# eD_AI_Appendix

./: AGENTS.md  CLAUDE.md  GEMINI.md  assignmentClarity.md  codex_conersation_log.md  codex_prompts_log.md  codex_suggestions_for_claude.md  conversation_log.md  cursor_conversation_log.md  cursor_prompts_log.md  eD.qmd  eD_submission.html  eD_submission.qmd  eD_submission_main.html  eD_submission_main.qmd  eD_submission_python.html  eD_submission_python.qmd  gemini_conversation_log.md  gemini_prompts_log.md  housing_clean.csv  lastSemest_eD_Notes.txt  model_comparison_m1_m2_m3.csv  model_comparison_m1_m2_m3_m4.csv  prompts_log.md  pyproject.toml  step1_imputation_validation.py  step1_neighborhood_viz.py  step2_lasso_and_m4.py  step2_model_m1.py  step2_model_m2.py  step2_model_m3.py  step2_neighborhood_test.py  step2_preprocessing.py  step2_prompt43_interactions.py  step2_prompt44_summary.py  step2_train_test.py  step2_vif_diagnostics.py  step3_diagnostic_table.py  step3_durbin_watson.py
