[project]
name = "ed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pandas>=2.3.3",
    "pip>=24.0",
    "plotly>=6.4.0",
    "python-dateutil>=2.9.0.post0",
    "jupyter-client>=8.6.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
]
